--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="menu">
         <ul class="grid">
           <li><a class="title" href="#home">Início</a></li>
-          <li><a class="title" href="#about">sobre</a></li>
+          <li><a class="title" href="#about">Sobre</a></li>
           <li><a class="title" href="#services">Serviços</a></li>
           <li><a class="title" href="#contact">Contato</a></li>
         </ul>
@@ -51,11 +51,11 @@
           <img src="assets/foto-inicio.jpg" alt="Bolinhos coloridos" />
         </div>
         <div class="text">
-          <h2 class="title">Doces, Brownies, etc.. a pronta entrega </h2>
-          <p>
-            Doces exclusivos na Região. Especializada em fazer seu dia mais feliz
+          <h2 class="title">Doceria Najuh </h2>
+          <p class=" paragraph">
+            Doces, Bolos, Brownies, Trufas, Palha Italiana e muito mais em um só lugar. Aproveite e faça seus pedidos!
           </p>
-          <a class="button" href="#whatsapp">Faça sua encomenda</a>
+          <a class="button" href="https://wa.me/message/BUDLT3N4GM3GD1" target="_blank">Faça sua encomenda</a>
         </div>
       </div>
     </section>
@@ -70,21 +70,27 @@
         </div>
         <div class="text">
           <h2 class="title">Sobre nós</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, unde? Cupiditate ipsam eum ipsa! Quia
-            delectus omnis, tempora possimus dolores provident esse alias vero laboriosam, cumque magni architecto, est
-            quibusdam!
+          <p class=" paragraph">
+            Somos a Doceria Najuh, especializados em Doces do mais alto padrão,
+            com receitas únicas e inovadoras. </p>
+          <br />
+          <p class=" paragraph">
+            Fazemos todos os tipos de doces, em especial os nossos Bolos, os nossos
+            deliciosos e irresistiveis docinhos e algumas outras Maravilhas.
           </p>
           <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi ipsum eos vero dolores sapiente? Eius
-            consequatur corporis recusandae inventore adipisci! Illum ea rem tempore vel ab, illo quos iure ipsum.
+          <p class=" paragraph">
+            Estamos no mercado desde 2020, localizado no Rio de Janeiro
+            nossos doces são gourmetizados e de extrema qualidade, pois utilizamos as melhores
+            matérias-primas, como chocolates nobres e ingredientes de primeira.
+
           </p>
           <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia accusamus, reprehenderit dignissimos
-            dolore corrupti laudantium dolorum sequi voluptates, distinctio impedit blanditiis ducimus quaerat alias
-            expedita velit doloribus, sit minima illum!
+          <p class=" paragraph">Nosso objetivo é proporcionar a você uma experiencia única,
+            oferecendo doces gostosos, fresquinhos e saboros.
+          </p>
+          <br />
+          <p class=" paragraph-c">Topa ter um dia mais feliz?
           </p>
         </div>
       </div>
@@ -98,32 +104,36 @@
         <header>
           <h2 class="title">Serviços</h2>
           <p class="subtitle">
-            Desde de xxxx no mercado deioniannoa a
-            <strong>Doceria Najuh</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id fugiat, nemo
-            nihil recusandae sed at repellendus molestias qui nulla quisquam cumque quos suscipit ab ad. Inventore
-            fugiat ipsa esse et?
+            Aceitamos encomendas e realizamos pronta entrega na região.
           </p>
         </header>
         <div class="cards grid">
           <div class="card">
-            <h3 class="title">Bolos para eventos</h3>
-            <p>
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/birthday-cake--v2.png" />
+            <h3 class="title">Bolos</h3>
+            <p class="subtitle-cards">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt natus repudiandae ullam,
               reiciendis mollitia qui aspernatur assumenda recusandae hic? Culpa aut cumque dolore sit numquam dolorum,
               fugit blanditiis. Amet!
             </p>
           </div>
           <div class="card">
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/cash-in-hand.png" />
+            <h3 class="title">Formas de Pagamento</h3>
+            <p class="subtitle-cards">
+            <ul>
+              <li class="li-cards">Cartão de Crédito</li>
+              <li class="li-cards">Cartão de Debíto</li>
+              <li class="li-cards">Dinheiro</li>
+              <li class="li-cards">Pix</li>
+            </ul>
+
+            </p>
+          </div>
+          <div class="card">
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/brigadeiro.png" />
             <h3 class="title">Docinhos</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt natus repudiandae ullam,
-              reiciendis mollitia qui aspernatur assumenda recusandae hic? Culpa aut cumque dolore sit numquam dolorum,
-              fugit blanditiis. Amet!
-            </p>
-          </div>
-          <div class="card">
-            <h3 class="title">SLA</h3>
-            <p>
+            <p class="subtitle-cards">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt natus repudiandae ullam,
               reiciendis mollitia qui aspernatur assumenda recusandae hic? Culpa aut cumque dolore sit numquam dolorum,
               fugit blanditiis. Amet!
@@ -140,17 +150,21 @@
       <div class="container grid">
         <div class="text">
           <h2 class="title">Entre em contato com a gente!</h2>
-          <p>
+          <p class="paragraph">
             Entre em contato com a Doceria Najuh, queremos tirar suas dúvidas, ouvir suas
             críticas, sugestões e atender os seus pedidos.
           </p>
-          <a href="##" class="button" target="_blank"><q class="icon-whatsapp_icon1"></q> Entrar em contato</a>
+          <a href="https://wa.me/message/BUDLT3N4GM3GD1" class="button" target="_blank"><q
+              class="icon-whatsapp_icon1"></q> Entrar em contato</a>
         </div>
 
         <div class="links">
           <ul class="grid">
-            <li><q class="icon-telephone_icon1"></q> (21) 97623-5211</li>
+            <li><q class="icon-telephone_icon1"></q><a href="tel:(21) 97623-5211">(21) 97623-5211</a></li>
             <li><q class="icon-localizao"></q> Estr. de Manguinhos, 13.</li>
+            <li><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.0413108109233!2d-43.24700732080585!3d-22.874932303984878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997ea689f30e45%3A0x6def18617ad8834e!2sEstr.%20de%20Manguinhos%2C%2013%20-%20Manguinhos%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021041-222!5e0!3m2!1spt-BR!2sbr!4v1643982653603!5m2!1spt-BR!2sbr"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
 
           </ul>
         </div>
@@ -172,7 +186,7 @@
         <a href="https://www.instagram.com/docerianajuh/" target="_blank">
           <i class="icon-ig_instagram_photo_icon1"></i>
         </a>
-        <a href="##" target="_blank"><i class="icon-whatsapp_icon1"></i>
+        <a href="https://wa.me/message/BUDLT3N4GM3GD1" target="_blank"><i class="icon-whatsapp_icon1"></i>
       </div>
     </div>
   </footer>
