My third commit, has been modified some texts, images and size of some things.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="text">
           <h2 class="title">Sobre nós</h2>
           <p class=" paragraph">
-            Somos a Doceria Najuh, especializados em Doces do mais alto padrão,
+            Somos a Doceria Najuh, especializados em Doces
             com receitas únicas e inovadoras. </p>
           <br />
           <p class=" paragraph">
@@ -80,8 +80,8 @@
           </p>
           <br />
           <p class=" paragraph">
-            Estamos no mercado desde 2020, localizado no Rio de Janeiro
-            nossos doces são gourmetizados e de extrema qualidade, pois utilizamos as melhores
+            Estamos no mercado desde 2020, localizado no Rio de Janeiro.
+            Nossos doces são gourmetizados e de extrema qualidade, pois utilizamos as melhores
             matérias-primas, como chocolates nobres e ingredientes de primeira.
 
           </p>
@@ -111,11 +111,7 @@
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/birthday-cake--v2.png" />
             <h3 class="title">Bolos</h3>
-            <p class="subtitle-cards">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt natus repudiandae ullam,
-              reiciendis mollitia qui aspernatur assumenda recusandae hic? Culpa aut cumque dolore sit numquam dolorum,
-              fugit blanditiis. Amet!
-            </p>
+
           </div>
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/cash-in-hand.png" />
@@ -133,11 +129,7 @@
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/brigadeiro.png" />
             <h3 class="title">Docinhos</h3>
-            <p class="subtitle-cards">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt natus repudiandae ullam,
-              reiciendis mollitia qui aspernatur assumenda recusandae hic? Culpa aut cumque dolore sit numquam dolorum,
-              fugit blanditiis. Amet!
-            </p>
+
           </div>
         </div>
       </div>
@@ -184,9 +176,10 @@
 
       <div class="social">
         <a href="https://www.instagram.com/docerianajuh/" target="_blank">
-          <i class="icon-ig_instagram_photo_icon1"></i>
+          <img style="width: 75%;" src="https://img.icons8.com/ios/50/000000/instagram-new--v1.png" /> </a>
+        <a href="https://wa.me/message/BUDLT3N4GM3GD1" target="_blank">
+          <img style="width: 75%;" src="https://img.icons8.com/ios/50/000000/whatsapp--v5.png" />
         </a>
-        <a href="https://wa.me/message/BUDLT3N4GM3GD1" target="_blank"><i class="icon-whatsapp_icon1"></i>
       </div>
     </div>
   </footer>
