--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <br />
           <p class=" paragraph">
             Fazemos todos os tipos de doces, em especial os nossos Bolos, os nossos
-            deliciosos e irresistiveis docinhos e algumas outras Maravilhas.
+            deliciosos e irresistíveis docinhos e algumas outras Maravilhas.
           </p>
           <br />
           <p class=" paragraph">
@@ -116,15 +116,7 @@
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/cash-in-hand.png" />
             <h3 class="title">Formas de Pagamento</h3>
-            <p class="subtitle-cards">
-            <ul>
-              <li class="li-cards">Cartão de Crédito</li>
-              <li class="li-cards">Cartão de Debíto</li>
-              <li class="li-cards">Dinheiro</li>
-              <li class="li-cards">Pix</li>
-            </ul>
 
-            </p>
           </div>
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/brigadeiro.png" />
@@ -143,7 +135,7 @@
         <div class="text">
           <h2 class="title">Entre em contato com a gente!</h2>
           <p class="paragraph">
-            Entre em contato com a Doceria Najuh, queremos tirar suas dúvidas, ouvir suas
+            Queremos tirar suas dúvidas, ouvir suas
             críticas, sugestões e atender os seus pedidos.
           </p>
           <a href="https://wa.me/message/BUDLT3N4GM3GD1" class="button" target="_blank"><q
