In this Commit I made another section for payment methods. A few more icons and PNG have been added.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a class="title" href="#home">Início</a></li>
           <li><a class="title" href="#about">Sobre</a></li>
           <li><a class="title" href="#services">Serviços</a></li>
+          <li><a class="title" href="#pagamento">Pagamentos</a></li>
           <li><a class="title" href="#contact">Contato</a></li>
         </ul>
       </div>
@@ -114,13 +115,42 @@
 
           </div>
           <div class="card">
-            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/cash-in-hand.png" />
-            <h3 class="title">Formas de Pagamento</h3>
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/birthday-presents.png" />
+            <h3 class="title">Kits Festas</h3>
 
           </div>
           <div class="card">
             <img class="img-cards" src="https://img.icons8.com/ios/100/000000/brigadeiro.png" />
             <h3 class="title">Docinhos</h3>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="divider-2"></div>
+
+    <!-- formas de pagamento -->
+
+    <section class="section" id="pagamento">
+      <div class="container grid">
+        <header>
+          <h2 class="title">Formas de Pagamento</h2>
+        </header>
+        <div class="cards grid">
+          <div class="card">
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/request-money.png" />
+            <h3 class="title">Dinheiro</h3>
+
+          </div>
+          <div class="card">
+            <img class="img-cards" src="https://img.icons8.com/ios/100/000000/card-in-use.png" />
+            <h3 class="title">Cartões de Crédito e Débito</h3>
+
+          </div>
+          <div class="card">
+            <img class="img-cards" src="assets/logo-pix-icone-1024.png" />
+            <h3 class="title">Pix</h3>
 
           </div>
         </div>
